--- a/changelog/279.feature.rst
+++ b/changelog/279.feature.rst
@@ -1,1 +1,1 @@
-Add new property, `~ndcube.NDCube.axis_world_coord_values`, to return world coords for all pixels for all axes in WCS as quantity objects.
+Add new method, `~ndcube.NDCube.axis_world_coord_values`, to return world coords for all pixels for all axes in WCS as quantity objects.
