Minor style changes to #302 changelogs
Co-authored-by: Stuart Mumford <stuart@cadair.com>

--- a/changelog/302.removal.rst
+++ b/changelog/302.removal.rst
@@ -1,1 +1,1 @@
-Remove world_axis_physical_types methods from NDCube and NDCubeSequence.
+Remove ``world_axis_physical_types`` methods from `.NDCube` and  `.NDCubeSequence`.
