--- a/changelog/323.feature.rst
+++ b/changelog/323.feature.rst
@@ -1,1 +1,1 @@
-Introduce a new class, GlobalCoords, for holding scalar coordinates that don't apply to any pixel axes.
+Introduce a new class, `~ndcube.global_coords.GlobalCoords`, for holding scalar coordinates that don't apply to any pixel axes.
