Add linking to changelogs and remove support for low level wcs from array_indices_for_world_objects.

--- a/changelog/344.bugfix.2.rst
+++ b/changelog/344.bugfix.2.rst
@@ -1,1 +1,1 @@
-Fixes IndexError in utils.wcs.array_indices_for_world_objects which occured when some of the world axes are dependent.
+Fixes IndexError in `~ndcube.utils.wcs.array_indices_for_world_objects` which occurred when some of the world axes are dependent.
