--- a/changelog/344.feature.rst
+++ b/changelog/344.feature.rst
@@ -1,1 +1,1 @@
-Implement NDCubeSequence.common_axis_coords to replace NDCubeSequence.common_axis_extra_coords. In contrast to old property, this new property collates coordinates from the wcs as well as extra_coords.
+Implement `ndcube.NDCubeSequence.common_axis_coords` to replace `~ndcube.NDCubeSequence.common_axis_extra_coords`. In contrast to old property, this new property collates coordinates from the wcs as well as extra_coords.
