--- a/changelog/344.removal.rst
+++ b/changelog/344.removal.rst
@@ -1,1 +1,1 @@
-Remove NDCubeSequence.common_axis_extra_coords.  Will be replaced by NDCubeSequence.common_axis_coords
+Remove `ndcube.NDCubeSequence.common_axis_extra_coords`.  Will be replaced by `ndcube.NDCubeSequence.common_axis_coords`.
