--- a/changelog/434.feature.rst
+++ b/changelog/434.feature.rst
@@ -1,1 +1,1 @@
-Adds functionality to reproject `NDCube` to coordinates described by another WCS or FITS Header.
+Adds functionality to reproject an `~.NDCube` object to coordinates described by another WCS or FITS Header by calling the new `~.NDCube.reproject_to` method.
