--- a/changelog/436.feature.rst
+++ b/changelog/436.feature.rst
@@ -1,1 +1,1 @@
-Adds functionality to stack cubes of an `~.NDCubeSequence` object together by reprojecting them to a common WCS and adding an extra dimension corresponding to the sequence axis.
+Adds functionality to stack cubes of an `~.NDCubeSequence` object together into a single `.NDCube` object, by reprojecting them to a common WCS and adding an extra dimension corresponding to the sequence axis.
