--- a/changelog/541.feature.rst
+++ b/changelog/541.feature.rst
@@ -1,3 +1,3 @@
-Add basic arithmetic methods between `~ndcube.NDCube` objects and broadcastable arrays
-and `~astropy.unit.Quantity` objects. Operations between two `~ndcube.NDCube` objects
+Add basic arithmetic methods between `~ndcube.NDCube` objects and broadcastable arrays,
+scalars, and `~astropy.unit.Quantity` objects. Operations between two `~ndcube.NDCube` objects
 are not supported.
