--- a/changelog/592.feature.rst
+++ b/changelog/592.feature.rst
@@ -1,1 +1,1 @@
-Create `~ndcube.GlobalCoordsABC` and update `~ndcube.NDCubeABC`, and `~ndcube.extra_coords.ExtraCoordsABC` to reflect official NDCube 2 API definition in SEP.
+Created `~ndcube.GlobalCoordsABC` and updated `~ndcube.NDCubeABC`, and `~ndcube.extra_coords.ExtraCoordsABC` to reflect official NDCube 2 API definition in SEP.
