Minor bibtex changes to JOSS paper.

--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -87,7 +87,7 @@
     author = {{Ryan}, Daniel and {Mumford}, Stuart and {Barnes}, Will T. and {Kumar Baruah}, Ankit and {Bhope}, Adwait and {Buchlin}, Eric and {Freij}, Nabil and {Ginsburg}, Adam and {Hayes}, Laura A. and {Homeier}, Derek and {Hughes}, J. Marcus and {Lowder}, Chris and {O'Steen}, Richard and {Pellorce}, Baptiste and {Robitaille}, Thomas and {Sharma}, Yash and {Shih}, Albert Y. and {Tollerud}, Erik and {West}, Matthew J.},
     title = "{A Unified Framework for Manipulating N-dimensional Astronomical Data and Coordinate
 Transformations in Python: The NDCube 2 & Astropy APE-14 WCS APIs}",
-    year = {2023},
+    year = {submitted},
     journal = {The Astrophysical Journal},
 }
 
@@ -157,7 +157,7 @@ Transformations in Python: The NDCube 2 & Astropy APE-14 WCS APIs}",
 
 @article{sunraster,
     author = {{Ryan}, Daniel and {et al}},
-    title = "{sunraster: Manipulating Solr Slit-spectrograph Observations in Python}",
-    year = {2023}
+    title = "{sunraster: Manipulating Solar Slit-spectrograph Observations in Python}",
+    year = {in prep.}
     journal = {Journal of Open Source Software},
 }
