--- a/changelog/450.feature.1.rst
+++ b/changelog/450.feature.1.rst
@@ -1,1 +1,1 @@
-Implement a new `ndcube.NDCube.superpixel` method to combine integer numbers of pixels along each axis into larger pixels.
+Implement a new `ndcube.NDCube.rebin` method to combine integer numbers of pixels along each axis into larger pixels.
