--- a/changelog/450.feature.3.rst
+++ b/changelog/450.feature.3.rst
@@ -1,1 +1,1 @@
-Add new method, `ndcube.ExtraCoords.interpolate`, to interpolate extra coordinates.
+Add new methods to interpolate lookup table coordinates: `ndcube.extra_coords.table_coord.QuantityTableCoordinate.interpolate`, `ndcube.extra_coords.table_coord.SkyCoordTableCoordinate.interpolate`, `ndcube.extra_coords.table_coord.TimeTableCoordinate.interpolate`, `ndcube.extra_coords.table_coord.MultipleTableCoordinate.interpolate`
