Next draft of JOSS paper.

--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -22,6 +22,13 @@
     url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
 }
 
+@inproceedings{cupy,
+  title = {{{CuPy}}: {{A NumPy-Compatible}} Library for {{NVIDIA GPU}} Calculations},
+  booktitle = {Proceedings of Workshop on Machine Learning Systems ({{LearningSys}}) in the Thirty-First Annual Conference on Neural Information Processing Systems ({{NIPS}})},
+  author = {Okuta, Ryosuke and Unno, Yuya and Nishino, Daisuke and Hido, Shohei and Loomis, Crissman},
+  year = {2017}
+}
+
 @Manual{dask,
   title = {Dask: Library for dynamic task scheduling},
   author = {{Dask Development Team}},
