Add mention of jdaviz to JOSS paper

--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -90,6 +90,41 @@
   url = {https://github.com/LM-SAL/irispy-lmsal}
 }
 
+@software{jdaviz,
+  author       = {JDADF Developers and
+                  Averbukh, Jesse and
+                  Bradley, Larry and
+                  Buikhuizen, Mario and
+                  Busko, Ivo and
+                  Cherinka, Brian and
+                  Conroy, Kyle and
+                  Earl, Nicholas and
+                  Fox, Ori and
+                  Geda, Robel and
+                  Jones, Craig and
+                  Karatay, Hatice and
+                  Kotler, Jenn and
+                  Lim, Pey Lian and
+                  Morris, Brett and
+                  Nguyen, Duy and
+                  O'Steen, Richard and
+                  Ogaz, Sara and
+                  Ogle, Patrick and
+                  Otor, O. Justin and
+                  Pacifici, Camilla and
+                  Robitaille, Thomas and
+                  Tollerud, Erik and
+                  Volfman, Sabrina},
+  title        = {Jdaviz},
+  month        = feb,
+  year         = 2023,
+  note         = {If you use this software, please cite it as below.},
+  publisher    = {Zenodo},
+  version      = {3.3.0},
+  doi          = {10.5281/zenodo.7625637},
+  url          = {https://doi.org/10.5281/zenodo.7625637}
+}
+
 @article{ndcube,
     author = {{Ryan}, Daniel and {Mumford}, Stuart and {Barnes}, Will T. and {Kumar Baruah}, Ankit and {Bhope}, Adwait and {Buchlin}, Eric and {Freij}, Nabil and {Ginsburg}, Adam and {Hayes}, Laura A. and {Homeier}, Derek and {Hughes}, J. Marcus and {Lowder}, Chris and {O'Steen}, Richard and {Pellorce}, Baptiste and {Robitaille}, Thomas and {Sharma}, Yash and {Shih}, Albert Y. and {Tollerud}, Erik and {West}, Matthew J.},
     title = "{A Unified Framework for Manipulating N-dimensional Astronomical Data and Coordinate
