Fix JOSS paper bib errors.

--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -200,6 +200,6 @@ Transformations in Python: The NDCube 2 & Astropy APE-14 WCS APIs}",
 @article{sunraster,
     author = {{Ryan}, Daniel and {et al}},
     title = "{sunraster: Manipulating Solar Slit-spectrograph Observations in Python}",
-    year = {in prep.}
+    year = {in prep.},
     journal = {Journal of Open Source Software},
 }
