--- a/changelog/726.feature.3.rst
+++ b/changelog/726.feature.3.rst
@@ -1,1 +1,1 @@
-Add a function for rebinning `~ndcube.NDCube` objects into irregularly sized bins along axes.
+Add a function  :func:`~ndcube.analysis.rebin.rebin_by_edges` for rebinning `~ndcube.NDCube` objects into irregularly sized bins along axes.
