--- a/changelog/802.trivial.rst
+++ b/changelog/802.trivial.rst
@@ -1,1 +1,1 @@
-Skip plotting line data if all values are NaN
+Make `~ndcube.visualization.mpl_plotter.MatplotlibPlotter` only add data to line plots if at least one value of the data is unmasked and finite.
