--- a/changelog/857.bugfix.rst
+++ b/changelog/857.bugfix.rst
@@ -1,1 +1,1 @@
-Fix translations in `~ndcube.wcs.wrappers.resampled_wcs.ResampledLowLevelWCS` between original and resampled pixel grids.
+Fix conversion in `~ndcube.wcs.wrappers.resampled_wcs.ResampledLowLevelWCS` between original and resampled pixel grids. This fixes an accuracy issue in ``NDCube`` objects which have had the `NDCube.rebin` method applied.
