Apply suggestions from code review
Co-authored-by: Stuart Mumford <stuart@cadair.com>

--- a/changelog/880.feature.rst
+++ b/changelog/880.feature.rst
@@ -1,1 +1,1 @@
-Enable subtraction and division of `~ndcube.NDCube` by an `~astropy.nddata.NDData` instance, including uncertainty, mask and unit support.
+Enable subtraction and division of `~ndcube.NDCube` by an `~astropy.nddata.NDData` instance (without a WCS), including uncertainty, mask and unit support.
